prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_function_literal.nut
// EXPECTED: compile-time error - lambda assigned to int variable
local x: int = @() 42
return x
